--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,18 @@
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^10.4.0",
+    "browserify-zlib": "^0.2.0",
+    "crypto-browserify": "^3.12.0",
     "parcel": "^2.0.1",
+    "path-browserify": "^1.0.1",
     "postcss": "^8.3.11",
     "process": "^0.11.10",
-    "tailwindcss": "^2.2.19"
+    "querystring-es3": "^0.2.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "tailwindcss": "^2.2.19",
+    "url": "^0.11.0",
+    "util": "^0.12.4"
   },
   "dependencies": {
     "react": "^17.0.2",
